# voice-agent-berlin-hack-26

./: .env.example  FIELD_VALIDATION_REPORT.md  README.md  TODO.md  plan.md  prd_phase3.md  prd_phase4.md  pyproject.toml  voice_agent_transcript.md
app/: config.py  main.py
app/agent/: gradium.py  prompts.py  schemas.py  session.py  tools.py
app/audio/: ambient.py  input.py  output.py
app/claims/: case_database.py  claim_state.py  playbook.yaml  playbook_engine.py
app/phone/: audio.py  bridge.py  server.py
app/twilio/: bridge.py  client.py  server.py
claims/: intake_fields.yaml
docs/: CHANGELOG.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY_PHASE4.md  INCA-SUMMARY.md  LISA_CLAIMS_FLOW_DECISIONS.md  TODO.md  plan.md  prd_phase1.md  prd_phase2.md  prd_phase3.md
evals/: escalation.yaml  happy_path.yaml  third_party_caller.yaml
static/: index.html
tests/: test_prompts.py  test_retrieve_case_data.py  test_web_api.py
